[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonts/TriodPostnaja.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Coin.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Shop.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=6]
script/source = "extends VBoxContainer


signal price_changed(item)


func _On_Button_pressed(item):
	emit_signal(\"price_changed\", item)
"

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=5]
script/source = "extends Label


func _ready():
	text = str(Global.money)
"

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.15
anchor_bottom = 0.05
custom_fonts/font = SubResource( 1 )
text = "Назад"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell" type="Button" parent="."]
anchor_left = 0.35
anchor_top = 0.92
anchor_right = 0.45
anchor_bottom = 0.92
custom_fonts/font = SubResource( 2 )
text = "Продать"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="."]
anchor_left = 0.85
anchor_top = 0.92
anchor_right = 0.95
anchor_bottom = 0.92
custom_fonts/font = SubResource( 3 )
text = "Купить"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="."]
margin_left = 21.0
margin_top = 78.0
margin_right = 504.0
margin_bottom = 518.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Scroll"]
custom_constants/separation = 15

[node name="Scroll2" type="ScrollContainer" parent="."]
margin_left = 518.0
margin_top = 66.0
margin_right = 1002.0
margin_bottom = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="Scroll2"]
custom_constants/separation = 15
script = SubResource( 6 )

[node name="Coin" type="Sprite" parent="."]
position = Vector2( 974.664, 34.9228 )
texture = ExtResource( 2 )

[node name="Money" type="Label" parent="Coin"]
margin_left = -121.0
margin_top = -11.0
margin_right = -35.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Cell" to="." method="_on_Cell_pressed"]
[connection signal="pressed" from="Buy" to="." method="_on_Buy_pressed"]
[connection signal="price_changed" from="Scroll2/Container" to="." method="_On_Price_changed"]
